Sistema modulo 1 terminado

--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,13 @@
 
 	<!--<base href="/prestamos/login/">-->
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta name="description" content="Sistema de prestamos">
+	<meta name="description" content="Ingresa al increible sistema de prestamos">
+	<meta name="author" content="Gary David Guzman Muñoz">
+
+	<meta property="og:title" content="Sistema de prestamos 'Guzmán'" />
+	<meta property="og:type" content="Sistema Web privado" />
+	<meta property="og:image" content="../app/img/loginIz.png" />
+	<meta property="og:description" content="Ingresa al increible sistema de prestamos" />
 
 	<!-- Librerias CSS-->
 	<link rel="stylesheet" href="../app/css/loading-bar.min.css">
