--- a/login/index.html
+++ b/login/index.html
@@ -12,6 +12,7 @@
 
 	<meta property="og:title" content="Sistema de prestamos 'Guzmán'" />
 	<meta property="og:type" content="Sistema Web privado" />
+	<meta itemprop="image" content="../app/img/loginIz.png">
 	<meta property="og:image" content="../app/img/loginIz.png" />
 	<meta property="og:description" content="Ingresa al increible sistema de prestamos" />
 
