--- a/login/index.html
+++ b/login/index.html
@@ -14,6 +14,7 @@
 	<meta property="og:type" content="Sistema Web privado" />
 	<meta itemprop="image" content="../app/img/loginIz.png">
 	<meta property="og:image" content="../app/img/loginIz.png" />
+	<meta property="twitter:image:src" content="../app/img/loginIz.png">
 	<meta property="og:description" content="Ingresa al increible sistema de prestamos" />
 
 	<!-- Librerias CSS-->
