--- a/login/index.html
+++ b/login/index.html
@@ -12,9 +12,9 @@
 
 	<meta property="og:title" content="Sistema de prestamos 'Guzmán'" />
 	<meta property="og:type" content="Sistema Web privado" />
-	<meta itemprop="image" content="../app/img/loginIz.png">
-	<meta property="og:image" content="../app/img/loginIz.png" />
-	<meta property="twitter:image:src" content="../app/img/loginIz.png">
+	<meta itemprop="image" content="http://45.32.92.213/prestamos/app/img/loginIz.png">
+	<meta property="og:image" content="http://45.32.92.213/prestamos/app/img/loginIz.png" />
+	<meta property="twitter:image:src" content="http://45.32.92.213/prestamos/app/img/loginIz.png">
 	<meta property="og:description" content="Ingresa al increible sistema de prestamos" />
 
 	<!-- Librerias CSS-->
